# cppSDLEngine

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cc
src/drawEngine/: drawEngine.cc  drawEngine.hh
src/inputEngine/: inputEngine.cc  inputEngine.hh
